# quantFiOop

./: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/include/: quantFiOop
cpp/include/quantFiOop_bits/: chapter1.hpp  matrix.hpp  test.hpp
cpp/src/: chapter1.cpp  matrix.cpp  test.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: chapter1.cpp  test.cpp
